[build-system]
build-backend = "mesonpy"
requires = ["meson-python>0.15.0", "numpy >= 1.25.0"]


[project]
name = "orientpy"
version = "0.2.1"
description = "Seismic station orientation tools"
authors = [
    { name = "Pascal Audet", email = "pascal.audet@uottawa.ca" }
]
maintainers = [
    { name = "Pascal Audet", email = "pascal.audet@uottawa.ca" }
]
requires-python = ">=3.9"
readme = "README.md"
dependencies = ["numpy>=1.25", "obspy"]
classifiers = [
    "Development Status :: 5 - Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Homepage = "https://github.com/nfsi-canada/OrientPy"
Documentation = "https://nfsi-canada.github.io/OrientPy"
"Bug Tracker" = "https://github.com/nfsi-canada/OrientPy/issues"

[project.scripts]
bng_calc_auto = "orientpy.scripts.bng_calc_auto:main"
bng_average = "orientpy.scripts.bng_average:main"
dl_calc = "orientpy.scripts.dl_calc:main"
dl_average = "orientpy.scripts.dl_average:main"